--- a/servlets/solo-web/pom.xml
+++ b/servlets/solo-web/pom.xml
@@ -20,11 +20,6 @@
     <dependencies>
         <dependency>
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
-            <artifactId>common-web</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
             <artifactId>solo-resources</artifactId>
             <scope>runtime</scope>
         </dependency>
@@ -32,6 +27,11 @@
             <groupId>jp.gr.java_conf.star_diopside.solo</groupId>
             <artifactId>solo-web-controller</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jstl</groupId>
